--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "c": "^1.1.1",
+    "clsx": "^2.1.1",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
